<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".create_requisition.view.FragmentRequisition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDFFFFFF"
                android:paddingVertical="8dp"
                android:paddingHorizontal="8dp"
                android:elevation="6dp"
                app:layout_constraintBottom_toTopOf="@id/clItemForPlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvShopIdTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/shop_number"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/edtShopId"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtShopId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="@font/roboto"
                android:hint="@string/n_mero_de_tienda"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/tvDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShopIdTag" />


                <TextView
                    android:id="@+id/tvDateTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/set_date"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/edtShopId"
                    app:layout_constraintStart_toStartOf="@+id/tvDate"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/date_example"
                android:paddingHorizontal="24dp"
                android:gravity="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edtShopId"
                app:layout_constraintTop_toBottomOf="@id/tvDateTag" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clItemForPlace"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_selected_product"
                android:elevation="6dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/ll1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl1">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/selected_product"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNoProductSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_product_selected"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@+id/rvConfirmItemForPlace"
                    app:layout_constraintStart_toStartOf="@+id/rvConfirmItemForPlace"
                    app:layout_constraintBottom_toBottomOf="@+id/rvConfirmItemForPlace"
                    app:layout_constraintEnd_toEndOf="@+id/rvConfirmItemForPlace"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvConfirmItemForPlace"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv1"
                    tools:listitem="@layout/list_item_final_product" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clItemForPlace">

            <Button
                android:id="@+id/btnAddMoreProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#BAFFB7"
                android:fontFamily="@font/roboto_bold"
                android:text="Add More"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnPlaceOrder"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Place Order"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnAddMoreProduct"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>